archive/2025-flow-based-ids/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ids-system
  labels:
    name: ids-system
    purpose: intrusion-detection
